--- a/week_02/02_ukoly.ipynb
+++ b/week_02/02_ukoly.ipynb
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -933,6 +933,9 @@
    "source": [
     "# I just did so I will do it without recursion now \n",
     "def factorial_no_rec(x):\n",
+    "    if x == 0:\n",
+    "        return 1\n",
+    "    \n",
     "    for i in range(1, x):\n",
     "        x *= i\n",
     "    return x\n",
